# yasnac

./: README.md  hacklab logo coords.txt  joint pulses notes
remote/: erc.py  motomoveP  motomove_az_el  motomove_az_el_rand  motomovecircle.py
remote/sat-main/: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
remote/sat-main/sat/: __init__.py  __main__.py
remote/sat-main/tests/: test_example.py
